-- ============================================================================
--  V1 — Baseline: o schema como estava ANTES da adocao do Flyway.
--
--  Corresponde exatamente ao DDL que o Hibernate gerava para PostgreSQL no
--  commit d4984cb (anterior a refatoracao P0/SCRUM-17..20).
--
--  IMPORTANTE: no banco do Railway esta migracao NAO roda. O banco ja existe,
--  criado historicamente por ddl-auto=update, e o spring.flyway.baseline-on-migrate
--  faz o Flyway gravar a baseline na versao 1 e comecar a aplicar da V2.
--  Este arquivo existe para que um ambiente novo (banco vazio) chegue ao mesmo
--  estado, e para que o schema fique versionado e legivel no repositorio.
--
--  O IF NOT EXISTS e defensivo: se algum ambiente estiver parcialmente criado,
--  a migracao completa o que falta em vez de abortar.
-- ============================================================================

CREATE TABLE IF NOT EXISTS usuarios (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY,
    nome               VARCHAR(255)   NOT NULL,
    email              VARCHAR(255)   NOT NULL UNIQUE,
    senha              VARCHAR(255)   NOT NULL,
    telefone           VARCHAR(255)   NOT NULL,
    tipo               VARCHAR(255)   NOT NULL,
    documento_federal  VARCHAR(255),
    data_nascimento    DATE,
    cidade             VARCHAR(255),
    estado             VARCHAR(255),
    foto_perfil        VARCHAR(255),
    score              FLOAT(53)      NOT NULL,
    media_avaliacao    FLOAT(53),
    nome_fantasia      VARCHAR(255),
    endereco_comercial VARCHAR(255),
    cnh_numero         VARCHAR(255),
    cnh_categoria      VARCHAR(255),
    cnh_validade       DATE,
    veiculo_modelo     VARCHAR(255),
    veiculo_placa      VARCHAR(255),
    veiculo_ano        INTEGER,
    veiculo_cor        VARCHAR(255),
    criado_em          TIMESTAMP(6)   NOT NULL,
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS turnos (
    id                     BIGINT GENERATED BY DEFAULT AS IDENTITY,
    lojist_id              BIGINT       NOT NULL,
    motoboy_id             BIGINT,
    titulo                 VARCHAR(255) NOT NULL,
    descricao              VARCHAR(255),
    regiao                 VARCHAR(255),
    data_inicio            TIMESTAMP(6) NOT NULL,
    data_fim               TIMESTAMP(6) NOT NULL,
    valor_estimado         FLOAT(53)    NOT NULL,
    raio_entrega_km        FLOAT(53),
    vagas                  INTEGER,
    status                 VARCHAR(255) NOT NULL,
    pagamento_status       VARCHAR(255),
    lojista_confirmou_em   TIMESTAMP(6),
    motoboy_confirmou_em   TIMESTAMP(6),
    criado_em              TIMESTAMP(6) NOT NULL,
    atualizado_em          TIMESTAMP(6),
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS turno_inscricoes (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY,
    turno_id             BIGINT       NOT NULL,
    motoboy_id           BIGINT       NOT NULL,
    status               VARCHAR(255) NOT NULL,
    pagamento_status     VARCHAR(255),
    lojista_confirmou_em TIMESTAMP(6),
    motoboy_confirmou_em TIMESTAMP(6),
    criado_em            TIMESTAMP(6) NOT NULL,
    PRIMARY KEY (id),
    CONSTRAINT uk_turno_motoboy UNIQUE (turno_id, motoboy_id)
);

CREATE TABLE IF NOT EXISTS carteiras (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY,
    motoboy_id     BIGINT    NOT NULL UNIQUE,
    saldo_atual    FLOAT(53) NOT NULL,
    ganhos_mensais FLOAT(53) NOT NULL,
    chave_pix      VARCHAR(255),
    atualizado_em  TIMESTAMP(6),
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS transacoes (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY,
    motoboy_id BIGINT       NOT NULL,
    turno_id   BIGINT,
    tipo       VARCHAR(255) NOT NULL,
    valor      FLOAT(53)    NOT NULL,
    descricao  VARCHAR(255),
    status     VARCHAR(255) NOT NULL,
    criado_em  TIMESTAMP(6) NOT NULL,
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS avaliacoes (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY,
    turno_id     BIGINT       NOT NULL,
    avaliador_id BIGINT       NOT NULL,
    avaliado_id  BIGINT       NOT NULL,
    nota         INTEGER      NOT NULL,
    comentario   VARCHAR(100),
    criado_em    TIMESTAMP(6) NOT NULL,
    PRIMARY KEY (id)
);
