-- ============================================================================
--  V2 — Estruturas da refatoracao P0 (SCRUM-17/18/19/20).
--
--  Estas colunas/tabelas foram introduzidas no commit f0663a9 e, ate aqui,
--  chegavam ao banco pelo ddl-auto=update. Como o perfil de producao passa a
--  usar ddl-auto=validate, elas precisam existir como migracao — senao o
--  Hibernate recusa o boot por schema divergente.
--
--  TUDO AQUI E IDEMPOTENTE de proposito. Nao da para inspecionar o banco do
--  Railway daqui, e nao se sabe se o deploy do P0 (que rodaria o ddl-auto=update)
--  ja aconteceu. Com IF NOT EXISTS a migracao chega ao mesmo estado final nos
--  dois cenarios: aplica o que falta e ignora o que ja existe.
-- ============================================================================

-- ── SCRUM-18: geolocalizacao do ponto de partida do turno ───────────────────
ALTER TABLE turnos ADD COLUMN IF NOT EXISTS latitude    FLOAT(53);
ALTER TABLE turnos ADD COLUMN IF NOT EXISTS longitude   FLOAT(53);
ALTER TABLE turnos ADD COLUMN IF NOT EXISTS endereco    VARCHAR(200);

-- ── SCRUM-19: marca do vencimento automatico ────────────────────────────────
ALTER TABLE turnos ADD COLUMN IF NOT EXISTS expirado_em TIMESTAMP(6);

-- ── SCRUM-20: notificacoes in-app ───────────────────────────────────────────
CREATE TABLE IF NOT EXISTS notificacoes (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY,
    usuario_id      BIGINT       NOT NULL,
    tipo            VARCHAR(40)  NOT NULL,
    titulo          VARCHAR(120) NOT NULL,
    mensagem        VARCHAR(255) NOT NULL,
    referencia_tipo VARCHAR(20),
    referencia_id   BIGINT,
    lida            BOOLEAN      NOT NULL,
    lida_em         TIMESTAMP(6),
    criado_em       TIMESTAMP(6) NOT NULL,
    PRIMARY KEY (id)
);

-- ── SCRUM-17: avaliacao mutua em turno multi-vaga ───────────────────────────
-- O unique passa a ser o trio (turno, avaliador, avaliado). Com o par antigo
-- (turno, avaliador) o lojista travava depois de avaliar o primeiro entregador.
--
-- ADD CONSTRAINT nao aceita IF NOT EXISTS no PostgreSQL, dai o bloco DO.
-- ATENCAO: se o banco ja tiver avaliacoes duplicadas para o mesmo trio, este
-- ALTER falha e a migracao aborta — o que e o comportamento correto, porque
-- significa que existe dado inconsistente para resolver antes de subir.
DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1 FROM pg_constraint
        WHERE conname = 'uk_avaliacao_turno_avaliador_avaliado'
    ) THEN
        ALTER TABLE avaliacoes
            ADD CONSTRAINT uk_avaliacao_turno_avaliador_avaliado
            UNIQUE (turno_id, avaliador_id, avaliado_id);
    END IF;
END $$;

-- ── Indices ─────────────────────────────────────────────────────────────────
-- Listagem de disponiveis e jobs de vencimento (SCRUM-18/19).
CREATE INDEX IF NOT EXISTS ix_turno_status_inicio ON turnos (status, data_inicio);
CREATE INDEX IF NOT EXISTS ix_turno_status_fim    ON turnos (status, data_fim);
-- Pre-filtro por bounding box no filtro de raio (SCRUM-18).
CREATE INDEX IF NOT EXISTS ix_turno_geo           ON turnos (status, latitude, longitude);
CREATE INDEX IF NOT EXISTS ix_turno_lojista       ON turnos (lojist_id);
CREATE INDEX IF NOT EXISTS ix_turno_motoboy       ON turnos (motoboy_id);

CREATE INDEX IF NOT EXISTS ix_avaliacao_avaliado  ON avaliacoes (avaliado_id);
CREATE INDEX IF NOT EXISTS ix_avaliacao_turno     ON avaliacoes (turno_id);

CREATE INDEX IF NOT EXISTS ix_notificacao_usuario ON notificacoes (usuario_id, lida, criado_em);
CREATE INDEX IF NOT EXISTS ix_notificacao_dedup   ON notificacoes (usuario_id, tipo, referencia_id);
