erDiagram
    USUARIOS ||--o{ TURNOS : "publica (lojist_id)"
    USUARIOS ||--o{ TURNOS : "atende (motoboy_id)"
    USUARIOS ||--|| CARTEIRAS : "possui"
    USUARIOS ||--o{ TURNO_INSCRICOES : "se inscreve"
    USUARIOS ||--o{ AVALIACOES : "avalia (avaliador_id)"
    USUARIOS ||--o{ AVALIACOES : "e avaliado (avaliado_id)"
    USUARIOS ||--o{ TRANSACOES : "movimenta"
    USUARIOS ||--o{ COBRANCAS : "recarrega e saca"
    USUARIOS ||--o{ NOTIFICACOES : "recebe"
    USUARIOS ||--o{ NOTAS_FISCAIS : "presta (prestador_id)"
    USUARIOS ||--o{ NOTAS_FISCAIS : "toma (tomador_id)"
    TURNOS   ||--o{ TURNO_INSCRICOES : "tem vagas preenchidas por"
    TURNOS   ||--o{ AVALIACOES : "gera"
    TURNOS   ||--o{ TRANSACOES : "origina"
    TURNOS   ||--o{ NOTAS_FISCAIS : "documenta"
    TRANSACOES ||--o| NOTAS_FISCAIS : "pagamento documentado por"

    USUARIOS {
        BIGINT id PK "IDENTITY"
        VARCHAR nome "NOT NULL"
        VARCHAR email UK "NOT NULL"
        VARCHAR senha "NOT NULL - BCrypt (V9)"
        VARCHAR telefone "NOT NULL"
        VARCHAR tipo "NOT NULL - lojista|motoboy"
        VARCHAR documento_federal "CPF/CNPJ"
        DATE data_nascimento ""
        VARCHAR cidade ""
        VARCHAR estado ""
        VARCHAR foto_perfil ""
        FLOAT score "NOT NULL - default 5.0"
        FLOAT media_avaliacao ""
        VARCHAR nome_fantasia "lojista"
        VARCHAR endereco_comercial "lojista"
        VARCHAR cnh_numero "motoboy"
        VARCHAR cnh_categoria "motoboy - A|AB"
        DATE cnh_validade "motoboy"
        VARCHAR veiculo_modelo "motoboy"
        VARCHAR veiculo_placa "motoboy"
        INTEGER veiculo_ano "motoboy"
        VARCHAR veiculo_cor "motoboy"
        INTEGER tentativas_login "NOT NULL - default 0 (RF01, V8)"
        TIMESTAMP bloqueado_ate "RF01 - bloqueio ativo (V8)"
        TIMESTAMP criado_em "NOT NULL"
    }

    TURNOS {
        BIGINT id PK "IDENTITY"
        BIGINT lojist_id FK "NOT NULL - usuarios.id"
        BIGINT motoboy_id FK "usuarios.id - 1o inscrito"
        VARCHAR titulo "NOT NULL"
        VARCHAR descricao ""
        VARCHAR regiao ""
        TIMESTAMP data_inicio "NOT NULL"
        TIMESTAMP data_fim "NOT NULL"
        NUMERIC valor_estimado "NOT NULL - 12,2"
        FLOAT raio_entrega_km "raio de atuacao"
        FLOAT latitude "SCRUM-18"
        FLOAT longitude "SCRUM-18"
        VARCHAR endereco "200"
        INTEGER vagas "default 1"
        VARCHAR status "NOT NULL - aberto|aceito|em_andamento|finalizado|cancelado|expirado"
        VARCHAR pagamento_status "null|pendente|pago"
        TIMESTAMP expirado_em "SCRUM-19"
        TIMESTAMP criado_em "NOT NULL"
        TIMESTAMP atualizado_em ""
    }

    TURNO_INSCRICOES {
        BIGINT id PK "IDENTITY"
        BIGINT turno_id FK "NOT NULL - turnos.id"
        BIGINT motoboy_id FK "NOT NULL - usuarios.id"
        VARCHAR status "NOT NULL - aceito|finalizado|cancelado"
        VARCHAR pagamento_status "null|pendente|pago - pago na finalizacao"
        TIMESTAMP criado_em "NOT NULL"
        UNIQUE uk_turno_motoboy UK "(turno_id, motoboy_id)"
    }

    AVALIACOES {
        BIGINT id PK "IDENTITY"
        BIGINT turno_id FK "NOT NULL - turnos.id"
        BIGINT avaliador_id FK "NOT NULL - usuarios.id"
        BIGINT avaliado_id FK "NOT NULL - usuarios.id"
        INTEGER nota "NOT NULL - 1 a 5"
        VARCHAR comentario "100"
        TIMESTAMP criado_em "NOT NULL"
        UNIQUE uk_avaliacao UK "(turno_id, avaliador_id, avaliado_id)"
    }

    CARTEIRAS {
        BIGINT id PK "IDENTITY"
        BIGINT usuario_id FK "NOT NULL UNIQUE - usuarios.id"
        BIGINT motoboy_id "legado - nullable"
        NUMERIC saldo_atual "NOT NULL - saldo disponivel 12,2"
        NUMERIC saldo_bloqueado "NOT NULL - reservado 12,2"
        NUMERIC ganhos_mensais "legado"
        BIGINT versao "trava otimista"
        VARCHAR chave_pix ""
        TIMESTAMP atualizado_em ""
    }

    TRANSACOES {
        BIGINT id PK "IDENTITY"
        BIGINT usuario_id FK "NOT NULL - usuarios.id"
        BIGINT contraparte_id FK "usuarios.id - outro lado"
        BIGINT motoboy_id "legado - nullable"
        BIGINT turno_id FK "turnos.id"
        VARCHAR tipo "NOT NULL - CHECK: recarga|reserva|liberacao_reserva|pagamento_enviado|pagamento_recebido|saque|bonus|estorno|retencao_iss|retencao_irrf"
        NUMERIC valor "NOT NULL - 12,2"
        VARCHAR descricao ""
        VARCHAR natureza "NOT NULL V12 - CHECK: credito|debito - sinal da tela"
        VARCHAR status "NOT NULL - CHECK: pendente|concluido|falhou|estornado"
        UUID operacao_id "V12 - une os dois lados de uma transferencia"
        NUMERIC saldo_disponivel_apos "V12 - foto do saldo 12,2"
        NUMERIC saldo_bloqueado_apos "V12 - foto do bloqueado 12,2"
        VARCHAR idempotency_key UK "NOT NULL V10, deterministica V12"
        TIMESTAMP criado_em "NOT NULL"
    }

    COBRANCAS {
        BIGINT id PK "IDENTITY"
        BIGINT usuario_id FK "NOT NULL - usuarios.id"
        VARCHAR tipo "NOT NULL - CHECK: recarga|saque"
        NUMERIC valor "NOT NULL - CHECK maior que zero - 12,2"
        VARCHAR status "NOT NULL - CHECK: pendente|concluido|falhou"
        VARCHAR codigo_pix "copia-e-cola na recarga, chave no saque"
        TIMESTAMP criada_em "NOT NULL"
        TIMESTAMP concluida_em "quando o gateway respondeu"
        VARCHAR idempotency_key UK "NOT NULL - idempotencia do pedido"
    }

    NOTIFICACOES {
        BIGINT id PK "IDENTITY"
        BIGINT usuario_id FK "NOT NULL - usuarios.id"
        VARCHAR tipo "NOT NULL - 40"
        VARCHAR titulo "NOT NULL - 120"
        VARCHAR mensagem "NOT NULL - 255"
        VARCHAR referencia_tipo "turno|avaliacao|carteira|nota_fiscal"
        BIGINT referencia_id "deep link - polimorfico, sem FK"
        BOOLEAN lida "NOT NULL - default false"
        TIMESTAMP lida_em ""
        TIMESTAMP criado_em "NOT NULL"
    }

    NOTAS_FISCAIS {
        BIGINT id PK "IDENTITY"
        BIGINT turno_id FK "NOT NULL - turnos.id"
        BIGINT transacao_id FK "transacoes.id - o pagamento que a nota documenta"
        UUID operacao_id "operacao do ledger, quando veio de um pagamento"
        BIGINT prestador_id FK "NOT NULL - usuarios.id (entregador)"
        BIGINT tomador_id FK "NOT NULL - usuarios.id (lojista)"
        BIGINT emitida_por_id FK "NOT NULL - quem disparou a emissao"
        INTEGER numero "NOT NULL - sequencial por prestador"
        VARCHAR serie "NOT NULL - 8"
        VARCHAR codigo_verificacao "NOT NULL - 16"
        VARCHAR descricao_servico "NOT NULL - 300"
        NUMERIC valor_servico "NOT NULL - base de calculo 12,2"
        NUMERIC iss_aliquota "NOT NULL - 6,4"
        NUMERIC iss_valor "NOT NULL - 12,2"
        NUMERIC irrf_aliquota "NOT NULL - 6,4"
        NUMERIC irrf_valor "NOT NULL - 12,2"
        NUMERIC valor_liquido "NOT NULL - 12,2"
        BOOLEAN tributos_retidos "NOT NULL - retido na fonte ou so informativo"
        TIMESTAMP competencia "NOT NULL - data do servico"
        TIMESTAMP emitida_em "NOT NULL"
        TIMESTAMP cancelada_em "so o prestador cancela"
        VARCHAR motivo_cancelamento "255"
        UNIQUE uk_nota_turno_prestador UK "(turno_id, prestador_id)"
        UNIQUE uk_nota_transacao UK "(transacao_id) - uma nota por pagamento"
    }
